--- a/css/main.css
+++ b/css/main.css
@@ -1,16 +1,12 @@
 #signIn {
     width: 100%;
     height: 100%;
+    background: #fff;
     padding-top: 80px;
 }
 
-#signIn h2 {
-    text-align: center;
-    letter-spacing: -2px;
-}
-
 #signIn form {
-    width: 300px;
+    width: 260px;
     height: 170px;
     position: absolute;
     top: 50%; left: 50%;
@@ -19,17 +15,9 @@
 }
 
 #signIn form small {
-    float: left;
-    margin-top: 16px;
     display: block;
-}
-
-#signIn form small a {
-    color: #999;
-}
-
-#signIn form button {
-    float: right;
+    text-align: center;
+    margin-top: 20px;
 }
 
 #signIn .signup {
@@ -42,28 +30,8 @@
     bottom: 20px; right: 20px;
 }
 
-#signInLoading {
-    display: none;
+#application {
     width: 100%;
     height: 100%;
-}
-
-#signInLoading img {
-    width: 60px;
-    height: 60px;
-    position: absolute;
-    top: 50%; left: 50%;
-    margin-top: -30px;
-    margin-left: -30px;
-}
-
-#signInLoading small {
-    width: 70px;
-    height: 20px;
-    color: #999;
-    position: absolute;
-    top: 50%; left: 50%;
-    margin-top: 50px;
-    margin-left: -35px;
-    text-align: center;
+    background: #fff;
 }
