--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,4 @@
+@import url(http://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700);
 @import url("../css/font-awesome.min.css");
 @import url("../css/main.css");
 
@@ -12,15 +13,16 @@ body {
     width: 100%;
     height: 100%;
     background: #fff;
-    font-family: Arial, sans-serif;
+    font-family: Open Sans, Arial, sans-serif;
+    font-weight: 400;
     font-size: 14px;
-    color: #333;
+    color: #666;
     position: absolute;
 }
 
 h1, h2, h3, h4, h5, h6 {
-    font-family: Arial, sans-serif;
-    font-weight: bold;
+    font-family: Open Sans, Arial, sans-serif;
+    font-weight: 400;
     color: #333;
 }
 
@@ -33,7 +35,7 @@ h6 { font-size: 14px; line-height: 18px; margin: 0 0 10px 0; }
 
 p       { margin: 0 0 20px 0; }
 em      { font-style: italic; }
-strong  { font-weight: bold; }
+strong  { font-weight: 700; }
 small   { font-size: 12px; }
 
 hr {
@@ -55,7 +57,7 @@ a:hover, a:focus {
 }
 
 ::-webkit-input-placeholder {
-    color: #999;
+    color: #aaa;
 }
 
 input[type="text"],
@@ -64,9 +66,9 @@ input[type="email"] {
     width: 200px;
     height: 30px;
     background: #fff; 
-    border: 1px solid #ccc;
+    border: 1px solid #ccc ;
     border-radius: 3px;
-    font-family: Arial, sans-serif;
+    font-family: Open Sans, Arial, sans-serif;
     color: #333;
     font-size: 14px;
     margin: 0 0 10px 0;
@@ -78,17 +80,18 @@ input[type="email"] {
 input[type="text"]:focus,
 input[type="password"]:focus,
 input[type="email"]:focus {
-    border: 1px solid #3486f7;
+    border: 1px solid #4285f4;
     transition: border 500ms linear;
 }
 
 input[type="text"].big,
 input[type="password"].big,
 input[type="email"].big {
-    width: 300px;
-    height: 50px;
-    font-size: 18px;
+    width: 260px;
+    height: 40px;
+    font-size: 14px;
     padding: 0 15px;
+    border-radius: 3px;
 }
 
 input[type=checkbox] {  
@@ -108,8 +111,7 @@ input[type=checkbox]:checked + label:before {
     font-size: 12px; 
     position: relative;  
     padding-left: 25px;
-    display: inline-block;  
-    cursor: pointer;
+    display: inline-block;
     -webkit-user-select: none;
 }
 
@@ -117,50 +119,47 @@ input[type=checkbox]:checked + label:before {
     content: "";
     width: 16px;  
     height: 16px;
-    background: -webkit-linear-gradient(top,#f5f5f5,#f1f1f1);
-	border: 1px solid #dcdcdc;
-    border-radius: 2px; 
+    background: #f5f5f5;
+	border: 1px solid #ccc;
+    border-radius: 2px;
     position: absolute;  
     left: 0; bottom: -2px;
     display: inline-block;  
 }
 
 .checkbox label:hover:before {
-    background: -webkit-linear-gradient(top,#f8f8f8,#f1f1f1);
-	border: 1px solid #c6c6c6;
+    background: #f7f7f7;
     box-shadow: 0px 1px 1px rgba(0,0,0,.05);
 }
 
 .checkbox label:active:before {
-	background: -webkit-linear-gradient(top,#f1f1f1,#f1f1f1);
+    background: #f5f5f5;
     box-shadow: inset 0px 1px 2px rgba(0,0,0,.05);
 }
 
 button {
     height: 30px;
-    background: -webkit-linear-gradient(top,#f5f5f5,#f1f1f1);
-	border: 1px solid #dcdcdc;
+    background: #f5f5f5;
+	border: 1px solid #ccc;
     border-radius: 3px;
-    box-shadow: none;
-    font-family: Arial, sans-serif;
+    box-shadow: 0px 1px 1px rgba(0,0,0,.05);
+    font-family: Open Sans, Arial, sans-serif;
     color: #333;
     font-size: 12px;
-    font-weight: bold;
+    font-weight: 600;
     margin: 0;
     padding: 0 10px;
     outline: 0;
     display: inline-block;
-    cursor: pointer;
 }
 
 button:hover:enabled {
-    background: -webkit-linear-gradient(top,#f8f8f8,#f1f1f1);
-	border: 1px solid #c6c6c6;
-    box-shadow: 0px 1px 1px rgba(0,0,0,.05);
+    background: #f7f7f7;
+    box-shadow: 0px 1px 1px rgba(0,0,0,.1);
 }
 
 button:active:enabled {
-	background: -webkit-linear-gradient(top,#f1f1f1,#f1f1f1);
+    background: #f5f5f5;
     box-shadow: inset 0px 1px 2px rgba(0,0,0,.05);
 }
 
@@ -168,8 +167,105 @@ button:disabled {
     opacity: .6;
 }
 
+button.blue {
+    background: #4285f4;
+    border: 1px solid #346ac4;
+    color: #fff;
+}
+
+button.blue:hover:enabled {
+    background: #468af9;
+    box-shadow: 0px 1px 1px rgba(0,0,0,.1);
+}
+
+button.blue:active:enabled {
+    background: #4285f4;
+    box-shadow: inset 0px 1px 2px rgba(0,0,0,.05);
+}
+
 button.big {
-    height: 50px;
-    font-size: 16px;
+    height: 40px;
+    font-size: 14px;
     padding: 0 20px;
+}
+
+button.wide {
+    width: 100%;
+}
+
+.windowBar {
+    -webkit-app-region: drag;
+    width: 100%;
+    height: 30px;
+    background: #f5f5f5;
+    border-bottom: 1px solid #ccc;
+    position: absolute;
+    top: 0; left: 0;
+}
+
+.windowBar .title {
+    width: 100%;
+    height: 100%;
+    text-align: center;
+    font-size: 12px;
+    line-height: 30px;
+    color: #333;
+}
+
+.windowBar i {
+    width: 30px;
+    height: 30px;
+    position: relative;
+}
+
+.windowBar i:before {
+    content: "";
+    width: 10px;
+    height: 10px;
+    background: url("../img/icons.png");
+    position: absolute;
+    top: 10px; left: 10px;
+}
+
+.windowBar i.close:before              { background-position: 0 0; }
+.windowBar i.close:hover:before        { background-position: 0 -10px; }
+.windowBar i.minimize:before           { background-position: -10px 0; }
+.windowBar i.minimize:hover:before     { background-position: -10px -10px; }
+.windowBar i.maximize:before           { background-position: -20px 0; }
+.windowBar i.maximize:hover:before     { background-position: -20px -10px; }
+.windowBar i.expand:before             { background-position: -30px 0; }
+.windowBar i.expand:hover:before       { background-position: -30px -10px; }
+.windowBar i.compress:before           { background-position: -40px 0; }
+.windowBar i.compress:hover:before     { background-position: -40px -10px; }
+
+.windowBar .actions {
+    width: 120px;
+    height: 100%;
+    position: absolute;
+    top: 0; left: 0;
+}
+
+.windowBar .actions i {
+    float: left;
+    border-right: 1px solid #ccc;
+}
+
+.windowBar .fullscreen {
+    width: 30px;
+    height: 100%;
+    position: absolute;
+    top: 0; right: 0;
+}
+
+.windowBar .fullscreen i {
+    float: right;
+    border-left: 1px solid #ccc;
+}
+
+.windowContent {
+    -webkit-app-region: no-drag;
+    width: 100%;
+    height: calc(100% - 30px);
+    position: absolute;
+    bottom: 0; left: 0;
 }
