Changed drag behaviour

--- a/css/style.css
+++ b/css/style.css
@@ -213,6 +213,7 @@ button.wide {
 }
 
 .windowBar i {
+    -webkit-app-region: no-drag;
     width: 30px;
     height: 30px;
     position: relative;
