--- a/css/main.css
+++ b/css/main.css
@@ -1,34 +1,67 @@
+/*/////////////////////////////////////////////////////////////////////////////////////
+// Sign in window */
 #signIn {
     width: 100%;
-    height: 100%;
-    background: #fff;
+    height: calc(100% - 70px);
+    text-align: center;
+    padding-top: 50px;
+}
+
+#signIn h1 {
+    color: #fff;
+    display: inline-block;
+    position: relative;
+    margin-left: 50px;
+    margin-bottom: 5px;
+}
+
+#signIn h1:before {
+    content: "";
+    width: 50px;
+    height: 50px;
+    background: url("../img/logo50.png");
+    position: absolute;
+    top: 6px; left: -56px;
+}
+
+#signIn h5 {
+    color: #888;
+    margin-bottom: 0px;
 }
 
 #signIn form {
     width: 260px;
     height: 180px;
     position: absolute;
-    top: 50%; left: 50%;
-    margin-top: -90px;
+    top: 170px; left: 50%;
     margin-left: -130px;
 }
 
+#signIn form .checkbox {
+    width: 120px;
+    height: 20px;
+    position: absolute;
+    bottom: 0; left: 0;
+}
+
 #signIn form small {
-    display: block;
+    width: 120px;
+    height: 20px;
+    position: absolute;
+    bottom: 0; right: 0;
+    text-align: right;
+}
+
+#signUp {
+    width: 100%;
+    height: 70px;
+    border-top: 1px solid rgba(255,255,255,.1);
     text-align: center;
-    margin-top: 20px;
+    padding-top: 20px;
 }
 
-#signIn .signup {
-    position:  absolute;
-    bottom: 20px; left: 20px;
-}
-
-#signIn .checkbox {
-    position:  absolute;
-    bottom: 20px; right: 20px;
-}
-
+/*/////////////////////////////////////////////////////////////////////////////////////
+// Application window */
 #application {
     width: 100%;
     height: 100%;
