--- a/css/style.css
+++ b/css/style.css
@@ -104,6 +104,7 @@ input[type="email"].big {
     height: 16px;
     background: transparent;
 	border: 1px solid rgba(255,255,255,.4);
+    border-radius: 100%;
     position: absolute;  
     left: 0; bottom: 0;
     display: inline-block;  
@@ -131,6 +132,7 @@ button {
     height: 30px;
     background: transparent;
 	border: 1px solid rgba(255,255,255,.4);
+    border-radius: 50px;
     font-family: Open Sans, Arial, sans-serif;
     color: #888;
     font-size: 12px;
