--- a/css/main.css
+++ b/css/main.css
@@ -62,8 +62,59 @@
 
 /*/////////////////////////////////////////////////////////////////////////////////////
 // Application window */
-#application {
+#sidebar {
+    width: 300px;
+    height: 100%;
+    background: #202224;
+    position: absolute;
+    top: 0; left: 0;
+}
+
+#sidebar .profile {
     width: 100%;
+    height: 100px;
+    border-right: 1px solid #000;
+    border-bottom: 1px solid rgba(255,255,255,.1);
+    position: relative;
+}
+
+#sidebar .profile button {
+    width: 30px;
+    height: 30px;
+    font-weight: 600;
+    padding: 0 0 10px 0;
+    line-height: 24px;
+    letter-spacing: 1px;
+    position: absolute;
+    bottom: 10px; right: 10px;
+}
+
+#sidebar .friends {
+    width: 100%;
+    height: calc(100% - 100px);
+    position: relative;
+    overflow-x: hidden;
+    overflow-y: scroll;
+}
+
+#sidebar .friends::-webkit-scrollbar {
+    width: 10px;
+}
+
+#sidebar .friends::-webkit-scrollbar-track {
+    background-color: #000;
+}
+
+#sidebar .friends::-webkit-scrollbar-thumb {
+    background-color: #36393b;
+    border: 2px solid transparent;
+    background-clip: content-box;
+}
+
+#application {
+    width: calc(100% - 300px);
     height: 100%;
     background: #fff;
+    position: absolute;
+    top: 0; right: 0;
 }
