--- a/css/main.css
+++ b/css/main.css
@@ -78,6 +78,54 @@
     position: relative;
 }
 
+#sidebar .profile .avatar {
+    width: 60px;
+    height: 60px;
+    position: absolute;
+    top: 20px; left: 20px;
+}
+
+#sidebar .profile .avatar:before {
+    content: "";
+    width: 16px;
+    height: 16px;
+    border: 3px solid #202224;
+    border-radius: 100%;
+    position: absolute;
+    bottom: -3px; right: -3px;
+}
+
+#sidebar .profile .avatar img {
+    width: 60px;
+    height: 60px;
+}
+
+#sidebar .profile h4 {
+    width: 190px;
+    height: 25px;
+    color: #fff;
+    font-weight: 400;
+    position: absolute;
+    top: 30px; left: 90px;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+}
+
+#sidebar .profile h6 {
+    width: 160px;
+    height: 20px;
+    color: #888;
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 20px;
+    position: absolute;
+    top: 55px; left: 90px;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+}
+
 #sidebar .profile button {
     width: 30px;
     height: 30px;
@@ -109,6 +157,74 @@
     background-color: #36393b;
     border: 2px solid transparent;
     background-clip: content-box;
+}
+
+#sidebar .friends ul {
+    width: 100%;
+    height: 100%;
+    margin: 0;
+    padding: 10px 0;
+    list-style: none;
+}
+
+#sidebar .friends ul li {
+    width: 100%;
+    height: 60px;
+    position: relative;
+}
+
+#sidebar .friends ul li:hover {
+    background: #2c2f31;
+    transition: background 150ms linear;
+}
+
+#sidebar .friends ul li[data-status="offline"] {
+    opacity: .5;
+    transition: opacity 300ms linear;
+}
+
+#sidebar .friends .avatar {
+    width: 40px;
+    height: 40px;
+    position: absolute;
+    top: 10px; left: 20px;
+}
+
+#sidebar .friends .avatar:before {
+    content: "";
+    width: 16px;
+    height: 16px;
+    border: 3px solid #202224;
+    border-radius: 100%;
+    position: absolute;
+    bottom: -3px; right: -3px;
+}
+
+#sidebar .friends ul li:hover .avatar:before {
+    border: 3px solid #2c2f31;
+    transition: border 150ms linear;
+}
+
+#sidebar .friends .avatar img {
+    width: 40px;
+    height: 40px;
+}
+
+#sidebar .friends h6 {
+    width: 210px;
+    height: 40px;
+    color: #fff;
+    font-weight: 600;
+    line-height: 40px;
+    position: absolute;
+    top: 10px; left: 70px;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+}
+
+#sidebar .friends h6 small {
+    color: #888;
 }
 
 #application {
