--- a/css/style.css
+++ b/css/style.css
@@ -195,6 +195,8 @@ button.wide {
     border-bottom: 1px solid #000;
     position: absolute;
     top: 0; left: 0;
+    -webkit-user-select: none;
+    cursor: default;
 }
 
 .windowBar .title {
