--- a/css/main.css
+++ b/css/main.css
@@ -200,16 +200,16 @@
 
 #sidebar .friends .avatar:before {
     content: "";
-    width: 16px;
-    height: 16px;
-    border: 3px solid #202224;
+    width: 12px;
+    height: 12px;
+    border: 2px solid #202224;
     border-radius: 100%;
     position: absolute;
-    bottom: -3px; right: -3px;
+    bottom: -2px; right: -2px;
 }
 
 #sidebar .friends ul li:hover .avatar:before {
-    border: 3px solid #2c2f31;
+    border: 2px solid #2c2f31;
     transition: border 150ms linear;
 }
 
@@ -241,4 +241,47 @@
     background: #fff;
     position: absolute;
     top: 0; right: 0;
+}
+
+#application .tabs {
+    width: 100%;
+    height: 40px;
+    background: #ececec;
+    border-bottom: 1px solid #ccc;
+    position: absolute;
+    top: 0; left: 0;
+}
+
+#application .chat {
+    width: 100%;
+    height: calc(100% - 120px);
+    background: #fff;
+    position: absolute;
+    top: 40px; left: 0;
+    overflow-x: hidden;
+    overflow-y: scroll;
+}
+
+#application .chat::-webkit-scrollbar {
+    width: 10px;
+}
+
+#application .chat::-webkit-scrollbar-track {
+    background-color: #ececec;
+    border-left: 1px solid #ccc;
+}
+
+#application .chat::-webkit-scrollbar-thumb {
+    background-color: #cccccc;
+    border: 2px solid transparent;
+    background-clip: content-box;
+}
+
+#application .send {
+    width: 100%;
+    height: 80px;
+    background: #fff;
+    border-top: 1px solid #ccc;
+    position: absolute;
+    bottom: 0; left: 0;
 }
