--- a/css/main.css
+++ b/css/main.css
@@ -250,6 +250,60 @@
     border-bottom: 1px solid #ccc;
     position: absolute;
     top: 0; left: 0;
+    -webkit-user-select: none;
+    cursor: default;
+}
+
+#application .tabs ul {
+    width: 100%;
+    height: 100%;
+    margin: 0;
+    padding: 0;
+    list-style: none;
+}
+
+#application .tabs ul li {
+    height: 100%;
+    background: #ececec;
+    border-right: 1px solid #ccc;
+    color: #333;
+    font-weight: 700;
+    padding: 0 40px 0 20px;
+    line-height: 40px;
+    float: left;
+    position: relative;
+    transition: background 150ms linear;
+}
+
+.#application .tabs ul li i {
+    -webkit-app-region: no-drag;
+    width: 50px;
+    height: 30px;
+    position: relative;
+}
+
+#application .tabs ul li i:before {
+    content: "";
+    width: 10px;
+    height: 10px;
+    background: url("../img/icons.png");
+    background-position: 0 -10px;
+    position: absolute;
+    top: 15px; right: 10px;
+    opacity: .3;
+}
+
+#application .tabs ul li i:hover:before {
+    opacity: 1;
+    transition: opacity 300ms linear;
+}
+
+#application .tabs ul li:hover {
+    background: #f2f2f2;
+}
+
+#application .tabs ul li.active {
+    background: #fff;
 }
 
 #application .chat {
@@ -277,11 +331,137 @@
     background-clip: content-box;
 }
 
+#application .chat .item {
+    width: 100%;
+    min-height: 90px;
+    border-bottom: 1px solid #ccc;
+    position: relative;
+}
+
+#application .chat .item .avatar {
+    width: 50px;
+    height: 50px;
+    background: red;
+    position: absolute;
+    top: 20px; left: 20px;
+}
+
+#application .chat .item .avatar img {
+    width: 50px;
+    height: 50px;
+}
+
+#application .chat .item .content {
+    width: calc(100% - 80px);
+	margin-left: 80px;
+	position: relative;
+    padding-right: 120px;
+    padding-top: 28px;
+}
+
+#application .chat .item .content .name {
+    width: 100%;
+    height: 16px;
+}
+
+#application .chat .item .content .name h6 {
+    font-weight: 700;
+}
+
+#application .chat .item .content .message {
+    width: 100%;
+    min-height: 20px;
+}
+
+#application .chat .item .content .time {
+    width: 120px;
+    position: absolute;
+    top: 0; right: 0;
+    text-align: right;
+    margin-top: 35px;
+    padding-right: 20px;
+}
+
 #application .send {
     width: 100%;
     height: 80px;
     background: #fff;
     border-top: 1px solid #ccc;
+    padding: 20px;
     position: absolute;
     bottom: 0; left: 0;
+    -webkit-user-select: none;
+    cursor: default;
+}
+
+#application .send textarea {
+    width: calc(100% - 40px);
+    height: 40px;
+    background: #fff; 
+    border: 1px solid #ccc;
+    font-family: Open Sans, Arial, sans-serif;
+    color: #333;
+    font-size: 14px;
+    margin: 0;
+    padding: 10px 50px 0 40px;
+    outline: 0;
+    display: block;
+    resize: none;
+}
+
+#application .send textarea::-webkit-scrollbar {
+    width: 10px;
+}
+
+#application .send textarea::-webkit-scrollbar-track {
+    background-color: #ececec;
+    border-left: 1px solid #ccc;
+}
+
+#application .send textarea::-webkit-scrollbar-thumb {
+    background-color: #cccccc;
+    border: 2px solid transparent;
+    background-clip: content-box;
+}
+
+#application .send .emoticons i:before {
+    content: "";
+    width: 20px;
+    height: 20px;
+    background: url("../img/icons.png");
+    background-position: top right;
+    position: absolute;
+    top: 30px; left: 30px;
+    opacity: .3;
+}
+
+#application .send .emoticons i:hover:before {
+    opacity: 1;
+    transition: opacity 300ms linear;
+}
+
+#application .send .drawing {
+    width: 40px;
+    height: 40px;
+    border-top: 1px solid #ccc;
+    border-right: 1px solid #ccc;
+    border-bottom: 1px solid #ccc;
+    position: absolute;
+    top: 20px; right: 20px;
+}
+
+#application .send .drawing i:before {
+    content: "";
+    width: 16px;
+    height: 16px;
+    background: url("../img/icons.png");
+    background-position: -84px -20px;
+    position: absolute;
+    top: 12px; left: 11px;
+    opacity: .3;
+}
+
+#application .send .drawing:hover i:before {
+    opacity: 1;
+    transition: opacity 300ms linear;
 }
