--- a/css/style.css
+++ b/css/style.css
@@ -26,14 +26,14 @@ h1, h2, h3, h4, h5, h6 {
     color: #333;
 }
 
-h1 { font-size: 60px; font-weight: 300; line-height: 60px; margin: 0 0 20px 0; }
-h2 { font-size: 48px; font-weight: 300; line-height: 48px; margin: 0 0 20px 0; }
-h3 { font-size: 36px; font-weight: 300; line-height: 36px; margin: 0 0 20px 0; }
-h4 { font-size: 24px; font-weight: 600; line-height: 24px; margin: 0 0 10px 0; }
-h5 { font-size: 18px; font-weight: 600; line-height: 18px; margin: 0 0 10px 0; }
-h6 { font-size: 14px; font-weight: 600; line-height: 14px; margin: 0 0 10px 0; }
+h1 { font-size: 60px; font-weight: 300; line-height: 60px; margin: 0 0; }
+h2 { font-size: 48px; font-weight: 300; line-height: 48px; margin: 0 0; }
+h3 { font-size: 36px; font-weight: 300; line-height: 36px; margin: 0 0; }
+h4 { font-size: 24px; font-weight: 600; line-height: 24px; margin: 0 0; }
+h5 { font-size: 18px; font-weight: 600; line-height: 18px; margin: 0 0; }
+h6 { font-size: 14px; font-weight: 600; line-height: 14px; margin: 0 0; }
 
-p       { margin: 0 0 20px 0; }
+p       { margin: 0 0; }
 em      { font-style: italic; }
 strong  { font-weight: 700; }
 small   { font-size: 12px; }
@@ -65,6 +65,7 @@ img.rounded {
 }
 
 ::selection {
+    color: #fff;
     background: #0077ff;
 }
 
@@ -130,7 +131,7 @@ input[type=checkbox]:checked + label:before {
     color: #fff;  
     text-align: center;  
     line-height: 17px;  
-}  
+}
 
 button {
     height: 30px;
