--- a/css/main.css
+++ b/css/main.css
@@ -308,7 +308,7 @@
 
 #application .chat {
     width: 100%;
-    height: calc(100% - 120px);
+    height: calc(100% - 119px);
     background: #fff;
     position: absolute;
     top: 40px; left: 0;
@@ -333,15 +333,22 @@
 
 #application .chat .item {
     width: 100%;
-    min-height: 90px;
     border-bottom: 1px solid #ccc;
     position: relative;
+}
+
+#application .chat .item.normal {
+    min-height: 90px;
+}
+
+#application .chat .item.append,
+#application .chat .item.presence {
+    min-height: 50px;
 }
 
 #application .chat .item .avatar {
     width: 50px;
     height: 50px;
-    background: red;
     position: absolute;
     top: 20px; left: 20px;
 }
@@ -356,12 +363,26 @@
 	margin-left: 80px;
 	position: relative;
     padding-right: 120px;
-    padding-top: 28px;
+    padding-bottom: 14px;
+}
+
+#application .chat .item .content img {
+    max-width: 100%;
+    height: auto;
+}
+
+#application .chat .item.normal .content {
+    padding-top: 26px;
+}
+
+#application .chat .item.append .content,
+#application .chat .item.presence .content{
+    padding-top: 16px;
 }
 
 #application .chat .item .content .name {
     width: 100%;
-    height: 16px;
+    height: 20px;
 }
 
 #application .chat .item .content .name h6 {
@@ -378,8 +399,56 @@
     position: absolute;
     top: 0; right: 0;
     text-align: right;
-    margin-top: 35px;
     padding-right: 20px;
+}
+
+#application .chat .item .content .time p {
+    color: #aaa;
+}
+
+#application .chat .item.normal .content .time {
+    margin-top: 35px;
+}
+
+#application .chat .item.append .content .time {
+    margin-top: 18px;
+}
+
+#application .chat .item.presence .content strong {
+    color: #333;
+}
+
+#application .chat .item.presence .animation {
+    width: 50px;
+    height: 50px;
+    position: absolute;
+    top: 0px; left: 20px;
+}
+
+#application .chat .item.presence .animation span {
+    width: 8px;
+    height: 8px;
+    border-radius: 100%;
+    float: left;
+    margin: 22px 4px 0 4px;
+    -webkit-animation: loading 0.6s infinite alternate;
+}
+#application .chat .item.presence .animation span:nth-of-type(1) {
+    background: #333;
+    -webkit-animation-delay: 0.0s;
+}
+#application .chat .item.presence .animation span:nth-of-type(2) {
+    background: #333;
+    -webkit-animation-delay: 0.2s;
+}
+#application .chat .item.presence .animation span:nth-of-type(3) {
+    background: #333;
+    -webkit-animation-delay: 0.4s;
+}
+@-webkit-keyframes loading {
+    100% {
+        background: #ccc;
+    }
 }
 
 #application .send {
