--- a/css/style.css
+++ b/css/style.css
@@ -2,7 +2,7 @@
 @import url("../css/font-awesome.min.css");
 @import url("../css/main.css");
 
-* { -webkit-box-sizing: border-box; }
+*, *:before, *:after { -webkit-box-sizing: border-box; }
 
 html, body {
     margin: 0;
