--- a/css/main.css
+++ b/css/main.css
@@ -261,6 +261,7 @@
     padding: 0;
     list-style: none;
     display: table;
+    table-layout: fixed;
     border-collapse: collapse;
     overflow: auto;
 }
