--- a/css/main.css
+++ b/css/main.css
@@ -313,6 +313,7 @@
 }
 
 #application .chat {
+    display: none;
     width: 100%;
     height: calc(100% - 119px);
     background: #fff;
@@ -320,6 +321,10 @@
     top: 40px; left: 0;
     overflow-x: hidden;
     overflow-y: scroll;
+}
+
+#application .chat.open {
+    display: block;
 }
 
 #application .chat::-webkit-scrollbar {
