--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,3 @@
-@import url("http://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700");
 @import url("../css/font-awesome.min.css");
 @import url("../css/main.css");
 
@@ -12,30 +11,28 @@ html, body {
 body {
     width: 100%;
     height: 100%;
-    background: #202224;
-    font-family: Open Sans, Arial, sans-serif;
-    font-weight: 600;
+    background: #f0f0f0;
+    font-family: Helvetica Neue, Helvetica, Arial, sans-serif;
     font-size: 14px;
     color: #666;
-    -webkit-font-smoothing: antialiased;
-    -webkit-text-size-adjust: 100%;
 }
 
 h1, h2, h3, h4, h5, h6 {
-    font-family: Open Sans, Arial, sans-serif;
+    font-family: Helvetica Neue, Helvetica, Arial, sans-serif;
+    font-weight: bold;
     color: #333;
 }
 
-h1 { font-size: 60px; font-weight: 300; line-height: 60px; margin: 0 0; }
-h2 { font-size: 48px; font-weight: 300; line-height: 48px; margin: 0 0; }
-h3 { font-size: 36px; font-weight: 300; line-height: 36px; margin: 0 0; }
-h4 { font-size: 24px; font-weight: 600; line-height: 24px; margin: 0 0; }
-h5 { font-size: 18px; font-weight: 600; line-height: 18px; margin: 0 0; }
-h6 { font-size: 14px; font-weight: 600; line-height: 14px; margin: 0 0; }
+h1 { font-size: 60px; line-height: 60px; margin: 0 0; }
+h2 { font-size: 48px; line-height: 48px; margin: 0 0; }
+h3 { font-size: 36px; line-height: 36px; margin: 0 0; }
+h4 { font-size: 24px; line-height: 24px; margin: 0 0; }
+h5 { font-size: 18px; line-height: 18px; margin: 0 0; }
+h6 { font-size: 14px; line-height: 14px; margin: 0 0; }
 
 p       { margin: 0 0; }
 em      { font-style: italic; }
-strong  { font-weight: 700; }
+strong  { font-weight: bold; }
 small   { font-size: 12px; }
 
 hr {
@@ -56,12 +53,24 @@ a:hover, a:focus {
     text-decoration: underline;
 }
 
-img.rounded {
+ul, ol {
+    margin: 0;
+    padding: 0;
+}
+
+.rounded {
     border-radius: 100%;
 }
 
-::-webkit-input-placeholder {
-    color: #aaa;
+input::-webkit-input-placeholder,
+textarea::-webkit-input-placeholder{
+    color: #999;
+    transition: color 400ms ease-in-out;
+}
+
+input:focus::-webkit-input-placeholder,
+textarea:focus::-webkit-input-placeholder{
+    color: #ccc;
 }
 
 ::selection {
@@ -72,34 +81,26 @@ img.rounded {
 input[type="text"],
 input[type="password"],
 input[type="email"] {
-    width: 200px;
-    height: 30px;
+    width: 260px;
+    height: 40px;
     background: #fff; 
-    border: none;
-    font-family: Open Sans, Arial, sans-serif;
+    border: 1px solid #d6d6d6;
+    border-radius: 3px;
+    font-family: Helvetica Neue, Helvetica, Arial, sans-serif;
     color: #333;
     font-size: 14px;
     margin: 0 0 10px 0;
-    padding: 0 10px;
+    padding: 0 12px;
     outline: 0;
     display: block;
 }
 
-input[type="text"].big,
-input[type="password"].big,
-input[type="email"].big {
-    width: 260px;
-    height: 40px;
-    font-size: 14px;
-    padding: 0 15px;
-}
-
 .checkbox label {
-    color: #888;
+    color: #666;
     font-size: 12px;
     position: absolute;  
     top: 0; left: 0;
-    padding-left: 24px;
+    padding-left: 22px;
     -webkit-user-select: none;
 }
 
@@ -107,16 +108,12 @@ input[type="email"].big {
     content: "";
     width: 16px;  
     height: 16px;
-    background: transparent;
-	border: 1px solid rgba(255,255,255,.4);
-    border-radius: 100%;
+    background: #fff; 
+    border: 1px solid #d6d6d6;
+    border-radius: 3px;
     position: absolute;  
     left: 0; bottom: 0;
     display: inline-block;  
-}
-
-.checkbox label:hover:before {
-	border: 1px solid rgba(255,255,255,1);
 }
 
 input[type=checkbox] {  
@@ -127,7 +124,7 @@ input[type=checkbox]:checked + label:before {
     content: "\f00c";  
     font-family: FontAwesome;
     font-size: 8px;  
-    color: #fff;  
+    color: #333;  
     text-align: center;  
     line-height: 15px;  
 }
@@ -135,12 +132,12 @@ input[type=checkbox]:checked + label:before {
 button {
     height: 30px;
     background: transparent;
-	border: 1px solid rgba(255,255,255,.4);
-    border-radius: 50px;
-    font-family: Open Sans, Arial, sans-serif;
-    color: #888;
+	border: 1px solid #d0d0d0;
+    border-radius: 3px;
+    font-family: Helvetica Neue, Helvetica, Arial, sans-serif;
+    color: #999;
     font-size: 12px;
-    font-weight: 400;
+    font-weight: normal;
     margin: 0;
     padding: 0 10px;
     outline: 0;
@@ -148,12 +145,8 @@ button {
 }
 
 button:hover:enabled {
-    color: rgba(255,255,255,1);
-    border: 1px solid rgba(255,255,255,1);
-}
-
-button:active:enabled {
-    border: 1px solid rgba(255,255,255,.4);
+    color: #666;
+    border: 1px solid #c0c0c0;
 }
 
 button:disabled {
@@ -164,10 +157,12 @@ button.blue {
     background: #0077ff;
     border: none;
     color: #fff;
+    font-weight: bold;
 }
 
 button.blue:hover:enabled {
     border: none;
+    color: #fff;
     background: #0088ff;
 }
 
@@ -186,87 +181,20 @@ button.wide {
     width: 100%;
 }
 
-.windowBar {
-    -webkit-app-region: drag;
-    width: 100%;
-    height: 30px;
-    background: #2c2f31 ;
-    border-bottom: 1px solid #000;
-    position: absolute;
-    top: 0; left: 0;
-    -webkit-user-select: none;
-    cursor: default;
-}
-
-.windowBar .title {
-    width: 100%;
-    height: 100%;
-    text-align: center;
-    font-size: 12px;
-    line-height: 30px;
-    color: #fff;
-}
-
-.windowBar i {
-    -webkit-app-region: no-drag;
-    width: 50px;
-    height: 30px;
-    position: relative;
-}
-
-.windowBar i:before {
-    content: "";
-    width: 10px;
-    height: 10px;
-    background: url("../img/icons.png");
-    position: absolute;
-    top: 10px; left: 20px;
-    opacity: .5;
-}
-
-.windowBar i:hover:before {
-    opacity: 1;
-}
-
-.windowBar i.close:before              { background-position: 0 0; }
-.windowBar i.minimize:before           { background-position: -10px 0; }
-.windowBar i.maximize:before           { background-position: -20px 0; }
-.windowBar i.expand:before             { background-position: -30px 0; }
-.windowBar i.compress:before           { background-position: -40px 0; }
-
-.windowBar .actions {
-    width: 150px;
-    height: 100%;
-    position: absolute;
-    top: 0; left: 0;
-}
-
-.windowBar .actions i {
-    float: left;
-    border-right: 1px solid #000;
-}
-
-.windowBar .fullscreen {
-    width: 30px;
-    height: 100%;
-    position: absolute;
-    top: 0; right: 0;
-}
-
-.windowBar .fullscreen i {
-    float: right;
-    border-left: 1px solid #000;
-}
-
-.windowContent {
-    -webkit-app-region: no-drag;
-    width: 100%;
-    height: calc(100% - 30px);
-    position: absolute;
-    bottom: 0; left: 0;
-}
-
 [data-status="online"] .avatar:before   { background: #0077ff; }
 [data-status="away"] .avatar:before     { background: #f4b400; }
 [data-status="busy"] .avatar:before     { background: #d73628; }
 [data-status="offline"] .avatar:before  { background: #888888; }
+
+.icon {
+    background-image: url("../img/icons.png");
+    background-repeat: no-repeat;
+    background-size: 100px;
+}
+
+@media only screen and (-webkit-min-device-pixel-ratio: 1.5),
+only screen and (min-resolution: 240dpi) {
+    .icon {
+        background-image: url("../img/icons@2x.png");
+    }
+}
