--- a/css/main.css
+++ b/css/main.css
@@ -255,6 +255,7 @@ only screen and (min-resolution: 240dpi) {
 }
 
 #application .top .windowBar {
+    -webkit-app-region: drag;
     width: 90px;
     height: 40px;
     border-left: 1px solid #d0d0d0;
@@ -265,6 +266,7 @@ only screen and (min-resolution: 240dpi) {
 }
 
 #application .top .windowBar li {
+    -webkit-app-region: no-drag;
     width: 10px;
     height: 10px;
     float: left;
