--- a/css/style.css
+++ b/css/style.css
@@ -216,14 +216,14 @@ only screen and (min-resolution: 240dpi) {
     height: 30px;
     list-style: none;
     position: absolute;
-    top: 0; right: 0;
+    top: 0; left: 0;
 }
 
 .windowBar ul li {
     -webkit-app-region: no-drag;
     width: 40px;
     height: 30px;
-    border-left: 1px solid #d0d0d0;
+    border-right: 1px solid #d0d0d0;
     float: left;
     position: relative;
 }
