--- a/css/main.css
+++ b/css/main.css
@@ -65,10 +65,10 @@ only screen and (min-resolution: 240dpi) {
 
 #signUp {
     width: 100%;
-    height: 70px;
+    height: 60px;
     border-top: 1px solid #d0d0d0;
     text-align: center;
-    padding-top: 20px;
+    padding-top: 25px;
     -webkit-user-select: none;
 }
 
@@ -77,7 +77,7 @@ only screen and (min-resolution: 240dpi) {
 #sidebar {
     width: 300px;
     height: 100%;
-    background: #f0f0f0;
+    background: #e8ecef;
     border-right: 1px solid #d0d0d0;
     position: absolute;
     top: 0; left: 0;
@@ -103,7 +103,7 @@ only screen and (min-resolution: 240dpi) {
     content: "";
     width: 23px;
     height: 23px;
-    border: 3px solid #f0f0f0;
+    border: 3px solid #e8ecef;
     border-radius: 100%;
     position: absolute;
     bottom: -3px; right: -3px;
@@ -141,12 +141,21 @@ only screen and (min-resolution: 240dpi) {
 #sidebar .profile button {
     width: 30px;
     height: 30px;
+    background: transparent;
+    color: rgba(0,0,0,.4);
+    border: 1px solid rgba(0,0,0,.2);
     font-weight: bold;
     padding: 0 0 10px 0;
-    line-height: 24px;
+    line-height: 22px;
     letter-spacing: 1px;
     position: absolute;
     bottom: 10px; right: 10px;
+}
+
+#sidebar .profile button:hover {
+    color: rgba(0,0,0,.5);
+    border: 1px solid rgba(0,0,0,.3);
+    transition: color 200ms linear, border 200ms linear;
 }
 
 #sidebar .friends {
@@ -208,7 +217,7 @@ only screen and (min-resolution: 240dpi) {
     content: "";
     width: 16px;
     height: 16px;
-    border: 2px solid #f0f0f0;
+    border: 2px solid #e8ecef;
     border-radius: 100%;
     position: absolute;
     bottom: -2px; right: -2px;
@@ -376,7 +385,7 @@ only screen and (min-resolution: 240dpi) {
 #application .send {
     width: 100%;
     height: 80px;
-    background: #f0f0f0;
+    background: #e8ecef;
     border-top: 1px solid #d0d0d0;
     padding: 20px;
     position: absolute;
