--- a/css/style.css
+++ b/css/style.css
@@ -11,7 +11,7 @@ html, body {
 body {
     width: 100%;
     height: 100%;
-    background: #f0f0f0;
+    background: #e8ecef;
     font-family: Helvetica Neue, Helvetica, Arial, sans-serif;
     font-size: 14px;
     color: #666;
@@ -130,51 +130,32 @@ input[type=checkbox]:checked + label:before {
 }
 
 button {
-    height: 30px;
-    background: transparent;
-	border: 1px solid #d0d0d0;
+    height: 40px;
+    background: #0077ff;
+	border: 1px solid #0055ff;
     border-radius: 3px;
     font-family: Helvetica Neue, Helvetica, Arial, sans-serif;
-    color: #999;
-    font-size: 12px;
-    font-weight: normal;
+    color: #fff;
+    font-size: 14px;
+    font-weight: bold;
     margin: 0;
-    padding: 0 10px;
+    padding: 0 20px;
     outline: 0;
     display: inline-block;
-}
-
-button:hover:enabled {
-    color: #666;
-    border: 1px solid #c0c0c0;
 }
 
 button:disabled {
     opacity: .6;
 }
 
-button.blue {
-    background: #0077ff;
-    border: none;
-    color: #fff;
-    font-weight: bold;
-}
-
-button.blue:hover:enabled {
-    border: none;
+button:hover:enabled {
     color: #fff;
     background: #0088ff;
 }
 
-button.blue:active:enabled {
+button:active:enabled {
     border: none;
     background: #0077ff;
-}
-
-button.big {
-    height: 40px;
-    font-size: 14px;
-    padding: 0 20px;
 }
 
 button.wide {
