--- a/css/style.css
+++ b/css/style.css
@@ -95,6 +95,12 @@ input[type="email"] {
     display: block;
 }
 
+input[type="text"].wide,
+input[type="password"].wide,
+input[type="email"].wide {
+    width: 100%;
+}
+
 .checkbox label {
     color: #666;
     font-size: 12px;
@@ -236,6 +242,55 @@ only screen and (min-resolution: 240dpi) {
     -webkit-app-region: no-drag;
     width: 100%;
     height: calc(100% - 30px);
+    position: absolute;
+    bottom: 0; left: 0;
+}
+
+.overlay {
+    display: none;
+    width: 100%;
+    height: 100%;
+    background: rgba(61,70,77,.6);
+    position: absolute;
+    top: 0; left: 0;
+    z-index: 999;
+}
+
+.overlay:before {
+    content: "";
+    width: 100%;
+    height: 1px;
+    background: #777;
+    position: absolute;
+    top: -1px; left: 0;
+}
+
+.overlay .modal {
+    width: 360px;
+    height: 480px;
+    background: #fff;
+    box-shadow: 0px 1px 4px rgba(0,0,0,.2);
+    position: absolute;
+    top: 50%; left: 50%;
+    margin-top: -240px;
+    margin-left: -180px;
+}
+
+.overlay .modal .header {
+    width: 100%;
+    height: 50px;
+    background: #fff;
+    border-bottom: 1px solid #d0d0d0;
+    padding: 16px;
+    position: absolute;
+    top: 0; left: 0;
+}
+
+.overlay .modal .content {
+    width: 100%;
+    height: calc(100% - 50px);
+    background: #e8ecef;
+    padding: 30px;
     position: absolute;
     bottom: 0; left: 0;
 }
