Dynamically add profile information

--- a/css/style.css
+++ b/css/style.css
@@ -167,10 +167,10 @@ button.wide {
     width: 100%;
 }
 
-[data-status="online"] .avatar:before   { background: #0077ff; }
-[data-status="away"] .avatar:before     { background: #f4b400; }
-[data-status="busy"] .avatar:before     { background: #d73628; }
-[data-status="offline"] .avatar:before  { background: #888888; }
+.avatar[data-status="online"]:before   { background: #0077ff; }
+.avatar[data-status="away"]:before     { background: #f4b400; }
+.avatar[data-status="busy"]:before     { background: #d73628; }
+.avatar[data-status="offline"]:before  { background: #888888; }
 
 .icon:after {
     content: "";
